moc: Fix asserts on moc on empty token preceding ## operator

Regression introduced in c32ef0a725c7ac9d8a9ab053407389ef2fddc64e
The expansion vector can be empty, in that case it is not allowed to
call constLast()

Task-number: QTBUG-55853
Change-Id: I47aa8eb7507ee91662215df42b4a66eebaa32bb5
Reviewed-by: Jędrzej Nowacki <jedrzej.nowacki@theqtcompany.com>